--- a/KGCA41/TGameCore/TGameCore.vcxproj.filters
+++ b/KGCA41/TGameCore/TGameCore.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="TSound.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TDxState.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TWindow.cpp">
@@ -114,6 +117,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="TSound.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TDxState.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
