--- a/KGCA41/TGameCore/TGameCore.vcxproj.filters
+++ b/KGCA41/TGameCore/TGameCore.vcxproj.filters
@@ -125,5 +125,6 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\..\data\shader\DefaultShape.txt" />
+    <Text Include="..\..\data\shader\DefaultShapeMask.txt" />
   </ItemGroup>
 </Project>
