--- a/KGCA41/TGameCore/TGameCore.vcxproj
+++ b/KGCA41/TGameCore/TGameCore.vcxproj
@@ -205,6 +205,7 @@ copy "TGameCore_R.lib" "..\\..\\lib\\"</Command>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\..\data\shader\DefaultShape.txt" />
+    <Text Include="..\..\data\shader\DefaultShapeMask.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
