--- a/KGCA41/TSampleSpriteManager/TSampleSpriteManager.vcxproj
+++ b/KGCA41/TSampleSpriteManager/TSampleSpriteManager.vcxproj
@@ -150,10 +150,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Sample.h" />
+    <ClInclude Include="TMapObject.h" />
     <ClInclude Include="TUser2D.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp" />
+    <ClCompile Include="TMapObject.cpp" />
     <ClCompile Include="TUser2D.cpp" />
   </ItemGroup>
   <ItemGroup>
