--- a/KGCA41/TSampleCollisionTest/TSampleCollisionTest.vcxproj
+++ b/KGCA41/TSampleCollisionTest/TSampleCollisionTest.vcxproj
@@ -152,6 +152,9 @@
     <ClInclude Include="Sample.h" />
     <ClInclude Include="TMapObject.h" />
     <ClInclude Include="TNpc2D.h" />
+    <ClInclude Include="TScene.h" />
+    <ClInclude Include="TSceneInGame.h" />
+    <ClInclude Include="TSceneTitle.h" />
     <ClInclude Include="TSprite.h" />
     <ClInclude Include="TSpriteManager.h" />
     <ClInclude Include="TUser2D.h" />
@@ -160,6 +163,9 @@
     <ClCompile Include="Sample.cpp" />
     <ClCompile Include="TMapObject.cpp" />
     <ClCompile Include="TNpc2D.cpp" />
+    <ClCompile Include="TScene.cpp" />
+    <ClCompile Include="TSceneInGame.cpp" />
+    <ClCompile Include="TSceneTitle.cpp" />
     <ClCompile Include="TSprite.cpp" />
     <ClCompile Include="TSpriteManager.cpp" />
     <ClCompile Include="TUser2D.cpp" />
