--- a/KGCA41/TSampleGame2/TSampleGame2.vcxproj
+++ b/KGCA41/TSampleGame2/TSampleGame2.vcxproj
@@ -150,11 +150,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Sample.h" />
+    <ClInclude Include="TEffect2D.h" />
+    <ClInclude Include="TProjectile2D.h" />
     <ClInclude Include="TSceneInGame.h" />
     <ClInclude Include="TSceneTitle.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp" />
+    <ClCompile Include="TEffect2D.cpp" />
+    <ClCompile Include="TProjectile2D.cpp" />
     <ClCompile Include="TSceneInGame.cpp" />
     <ClCompile Include="TSceneTitle.cpp" />
   </ItemGroup>
