--- a/KGCA41/TSampleGame3/TSampleGame3.vcxproj
+++ b/KGCA41/TSampleGame3/TSampleGame3.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="Sample.h" />
     <ClInclude Include="TCamera.h" />
     <ClInclude Include="TEffect2D.h" />
+    <ClInclude Include="TMap.h" />
     <ClInclude Include="TProjectile2D.h" />
     <ClInclude Include="TSceneInGame.h" />
     <ClInclude Include="TSceneTitle.h" />
@@ -161,6 +162,7 @@
     <ClCompile Include="Sample.cpp" />
     <ClCompile Include="TCamera.cpp" />
     <ClCompile Include="TEffect2D.cpp" />
+    <ClCompile Include="TMap.cpp" />
     <ClCompile Include="TProjectile2D.cpp" />
     <ClCompile Include="TSceneInGame.cpp" />
     <ClCompile Include="TSceneTitle.cpp" />
