--- a/KGCA41/TSampleGame3/TSampleGame3.vcxproj
+++ b/KGCA41/TSampleGame3/TSampleGame3.vcxproj
@@ -150,9 +150,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Sample.h" />
-    <ClInclude Include="TCamera.h" />
+    <ClInclude Include="TCameraDebug.h" />
     <ClInclude Include="TEffect2D.h" />
     <ClInclude Include="TMap.h" />
+    <ClInclude Include="TObject3D.h" />
     <ClInclude Include="TProjectile2D.h" />
     <ClInclude Include="TSceneInGame.h" />
     <ClInclude Include="TSceneTitle.h" />
@@ -160,9 +161,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp" />
-    <ClCompile Include="TCamera.cpp" />
+    <ClCompile Include="TCameraDebug.cpp" />
     <ClCompile Include="TEffect2D.cpp" />
     <ClCompile Include="TMap.cpp" />
+    <ClCompile Include="TObject3D.cpp" />
     <ClCompile Include="TProjectile2D.cpp" />
     <ClCompile Include="TSceneInGame.cpp" />
     <ClCompile Include="TSceneTitle.cpp" />
@@ -170,6 +172,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="DefaultObject.txt" />
+    <Text Include="DefaultShape.txt" />
     <Text Include="SpriteInfo.txt" />
     <Text Include="ui.txt" />
   </ItemGroup>
