--- a/KGCA41/TGameCore/TGameCore.vcxproj
+++ b/KGCA41/TGameCore/TGameCore.vcxproj
@@ -178,6 +178,7 @@ copy "TGameCore_R.lib" "..\\..\\lib\\"</Command>
     <ClInclude Include="TInput.h" />
     <ClInclude Include="TInterface.h" />
     <ClInclude Include="TMapObject.h" />
+    <ClInclude Include="TMath.h" />
     <ClInclude Include="TMatrix.h" />
     <ClInclude Include="TNpc2D.h" />
     <ClInclude Include="TObject2D.h" />
@@ -207,6 +208,7 @@ copy "TGameCore_R.lib" "..\\..\\lib\\"</Command>
     <ClCompile Include="TInput.cpp" />
     <ClCompile Include="TInterface.cpp" />
     <ClCompile Include="TMapObject.cpp" />
+    <ClCompile Include="TMath.cpp" />
     <ClCompile Include="TMatrix.cpp" />
     <ClCompile Include="TNpc2D.cpp" />
     <ClCompile Include="TObject2D.cpp" />
