--- a/KGCA41/TSampleGame3/TSampleGame3.vcxproj
+++ b/KGCA41/TSampleGame3/TSampleGame3.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="Sample.h" />
     <ClInclude Include="TCameraDebug.h" />
     <ClInclude Include="TEffect2D.h" />
+    <ClInclude Include="TFrustum.h" />
     <ClInclude Include="TMap.h" />
     <ClInclude Include="TObject3D.h" />
     <ClInclude Include="TProjectile2D.h" />
@@ -163,6 +164,7 @@
     <ClCompile Include="Sample.cpp" />
     <ClCompile Include="TCameraDebug.cpp" />
     <ClCompile Include="TEffect2D.cpp" />
+    <ClCompile Include="TFrustum.cpp" />
     <ClCompile Include="TMap.cpp" />
     <ClCompile Include="TObject3D.cpp" />
     <ClCompile Include="TProjectile2D.cpp" />
