--- a/KGCA41/TSampleGame3/TSampleGame3.vcxproj
+++ b/KGCA41/TSampleGame3/TSampleGame3.vcxproj
@@ -151,12 +151,16 @@
   <ItemGroup>
     <ClInclude Include="Sample.h" />
     <ClInclude Include="TMap.h" />
+    <ClInclude Include="TNode.h" />
+    <ClInclude Include="TQuadtree.h" />
     <ClInclude Include="TSceneInGame.h" />
     <ClInclude Include="TSceneTitle.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp" />
     <ClCompile Include="TMap.cpp" />
+    <ClCompile Include="TNode.cpp" />
+    <ClCompile Include="TQuadtree.cpp" />
     <ClCompile Include="TSceneInGame.cpp" />
     <ClCompile Include="TSceneTitle.cpp" />
   </ItemGroup>
