--- a/KGCA41/TFBXLoader/TFBXLoader.vcxproj
+++ b/KGCA41/TFBXLoader/TFBXLoader.vcxproj
@@ -146,10 +146,12 @@
   <ItemGroup>
     <ClInclude Include="Sample.h" />
     <ClInclude Include="TFbxLoader.h" />
+    <ClInclude Include="TFbxObject.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp" />
     <ClCompile Include="TFbxLoader.cpp" />
+    <ClCompile Include="TFbxObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\..\data\shader\DefaultObject.txt" />
