--- a/KGCA41/TFBXLoader/TFBXLoader.vcxproj.filters
+++ b/KGCA41/TFBXLoader/TFBXLoader.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClInclude Include="TFbxLoader.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TFbxObject.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="TFbxLoader.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TFbxObject.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
