--- a/KGCA41/TGameCore/TGameCore.vcxproj
+++ b/KGCA41/TGameCore/TGameCore.vcxproj
@@ -121,7 +121,7 @@
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ConformanceMode>true</ConformanceMode>
+      <ConformanceMode>false</ConformanceMode>
       <AdditionalIncludeDirectories>../../dxtk/inc;../../fmod/inc;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
