--- a/KGCA41/TGameTool/TGameTool.vcxproj
+++ b/KGCA41/TGameTool/TGameTool.vcxproj
@@ -196,6 +196,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Sample.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TCreateMap.h" />
     <ClInclude Include="TGameTool.h" />
     <ClInclude Include="TGameToolDoc.h" />
     <ClInclude Include="TGameToolView.h" />
@@ -217,6 +218,7 @@
     </ClCompile>
     <ClCompile Include="PropertiesWnd.cpp" />
     <ClCompile Include="Sample.cpp" />
+    <ClCompile Include="TCreateMap.cpp" />
     <ClCompile Include="TGameTool.cpp" />
     <ClCompile Include="TGameToolDoc.cpp" />
     <ClCompile Include="TGameToolView.cpp" />
