--- a/KGCA41/TGameTool/TGameTool.vcxproj.filters
+++ b/KGCA41/TGameTool/TGameTool.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="TSceneTitle.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TCreateMap.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TGameTool.cpp">
@@ -108,6 +111,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="TSceneTitle.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TCreateMap.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
