--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 /KGCA41/TGameTool/x64/Debug
 /KGCA41/TKGCATool/x64/Debug
 /KGCA41/Socket_0/x64/Debug
+/KGCA41/SocketWin/SocketWin.vcxproj.user
+/KGCA41/Client_0/Client_0.vcxproj.user
