--- a/KGCA41/ServerIOCP/ServerIOCP.vcxproj
+++ b/KGCA41/ServerIOCP/ServerIOCP.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{28D8FFFF-891A-47FB-A579-F1CC6CDA7311}</ProjectGuid>
+    <ProjectGuid>{24271CB7-F702-4205-BC6C-B375F90F291E}</ProjectGuid>
     <RootNamespace>IOCP0</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -79,7 +79,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>../../output/Debug/</OutDir>
-    <IntDir>../../output/Debug/IOCP_2</IntDir>
+    <IntDir>../../output/Debug/ServerIOCP</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -122,6 +122,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -141,7 +142,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="IOCP_0.cpp" />
+    <ClCompile Include="Server.cpp" />
+    <ClCompile Include="TIocp.cpp" />
+    <ClCompile Include="TSessionMgr.cpp" />
+    <ClCompile Include="TSessionUser.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TIocp.h" />
+    <ClInclude Include="TProtocol.h" />
+    <ClInclude Include="TServerStd.h" />
+    <ClInclude Include="TSessionMgr.h" />
+    <ClInclude Include="TSessionUser.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
