--- a/KGCA41/ServerIOCP/ServerIOCP.vcxproj
+++ b/KGCA41/ServerIOCP/ServerIOCP.vcxproj
@@ -149,6 +149,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TIocp.h" />
+    <ClInclude Include="TObjectPool.h" />
     <ClInclude Include="TProtocol.h" />
     <ClInclude Include="TServerStd.h" />
     <ClInclude Include="TSessionMgr.h" />
