--- a/KGCA41/AStar/AStar.vcxproj.filters
+++ b/KGCA41/AStar/AStar.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClCompile Include="TAStar.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TPloyd.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TAStar.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TPloyd.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TPathStd.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
