--- a/KGCA41/TKGCATool/TKGCATool.vcxproj
+++ b/KGCA41/TKGCATool/TKGCATool.vcxproj
@@ -195,6 +195,7 @@
     <ClInclude Include="Sample.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TCharacter.h" />
+    <ClInclude Include="TCreateMapDlg.h" />
     <ClInclude Include="TFbxFile.h" />
     <ClInclude Include="TFbxObject.h" />
     <ClInclude Include="TKGCATool.h" />
@@ -217,6 +218,7 @@
     </ClCompile>
     <ClCompile Include="Sample.cpp" />
     <ClCompile Include="TCharacter.cpp" />
+    <ClCompile Include="TCreateMapDlg.cpp" />
     <ClCompile Include="TFbxAnimation.cpp" />
     <ClCompile Include="TFbxFile.cpp" />
     <ClCompile Include="TFbxLoader.cpp" />
