--- a/KGCA41/TKGCATool/TKGCATool.vcxproj.filters
+++ b/KGCA41/TKGCATool/TKGCATool.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="TFbxObject.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TCreateMapDlg.h">
+      <Filter>MFC</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp">
@@ -124,6 +127,9 @@
     </ClCompile>
     <ClCompile Include="TFbxObject.cpp">
       <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TCreateMapDlg.cpp">
+      <Filter>MFC</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
