--- a/KGCA41/TKGCATool/TKGCATool.vcxproj
+++ b/KGCA41/TKGCATool/TKGCATool.vcxproj
@@ -194,6 +194,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Sample.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TCameraMap.h" />
     <ClInclude Include="TCharacter.h" />
     <ClInclude Include="TCreateMapDlg.h" />
     <ClInclude Include="TFbxFile.h" />
@@ -224,6 +225,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Sample.cpp" />
+    <ClCompile Include="TCameraMap.cpp" />
     <ClCompile Include="TCharacter.cpp" />
     <ClCompile Include="TCreateMapDlg.cpp" />
     <ClCompile Include="TFbxAnimation.cpp" />
