--- a/KGCA41/TKGCATool/TKGCATool.vcxproj
+++ b/KGCA41/TKGCATool/TKGCATool.vcxproj
@@ -96,6 +96,7 @@
       <PreprocessorDefinitions>_WINDOWS;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>../../include/TCore2D;../../dxtk/inc;../../fmod/inc;../../fbxsdk/include;</AdditionalIncludeDirectories>
+      <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
