--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@
 /KGCA41/Socket_0/x64/Debug
 /KGCA41/SocketWin/SocketWin.vcxproj.user
 /KGCA41/Client_0/Client_0.vcxproj.user
+/KGCA41/ODBC_0/cigarette.laccdb
+/KGCA41/ODBC_0/ODBC_0.vcxproj.user
+/KGCA41/ODBC_0/ODBC_0.vcxproj.filters
+/KGCA41/ODBC_0/ODBC_0.APS
