--- a/KGCA41/ODBC_0/ODBC_0.rc
+++ b/KGCA41/ODBC_0/ODBC_0.rc
@@ -50,14 +50,23 @@ END
 // Dialog
 //
 
-IDD_DIALOG1 DIALOGEX 0, 0, 309, 176
+IDD_DIALOG1 DIALOGEX 0, 0, 361, 176
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Dialog"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "확인",IDOK,198,155,50,14
-    PUSHBUTTON      "취소",IDCANCEL,252,155,50,14
-    LISTBOX         IDC_LIST1,7,20,122,137,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    DEFPUSHBUTTON   "확인",IDOK,245,155,50,14
+    PUSHBUTTON      "취소",IDCANCEL,304,155,50,14
+    LISTBOX         IDC_LIST1,7,20,122,137,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_NAME,137,116,59,19,ES_AUTOHSCROLL
+    EDITTEXT        IDC_PRICE,217,116,59,19,ES_AUTOHSCROLL
+    CONTROL         "국산",IDC_KOREAN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,291,121,31,10
+    LTEXT           "이름",IDC_STATIC,140,103,16,8
+    LTEXT           "가격",IDC_STATIC,218,103,16,8
+    LTEXT           "국산",IDC_STATIC,291,100,16,8
+    PUSHBUTTON      "삽입",IDC_INSERT,155,22,50,14
+    PUSHBUTTON      "삭제",IDC_DELETE,221,22,50,14
+    PUSHBUTTON      "수정",IDC_UPDATE,287,22,50,14
 END
 
 
@@ -72,7 +81,7 @@ BEGIN
     IDD_DIALOG1, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 302
+        RIGHTMARGIN, 354
         TOPMARGIN, 7
         BOTTOMMARGIN, 169
     END
