--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@
 /KGCA41/ODBC_0/ODBC_0.vcxproj.user
 /KGCA41/ODBC_0/ODBC_0.vcxproj.filters
 /KGCA41/ODBC_0/ODBC_0.APS
+/KGCA41/ODBC_2_Prepare/cigarette.laccdb
