--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@
 /KGCA41/ODBC_0/ODBC_0.vcxproj.filters
 /KGCA41/ODBC_0/ODBC_0.APS
 /KGCA41/ODBC_2_Prepare/cigarette.laccdb
+/KGCA41/ODBC_3_Prepare/ODBC_3_Prepare.vcxproj.user
+/KGCA41/ODBC_3_Prepare/ODBC_0.APS
