--- a/KGCA41/ODBC_3_Prepare/ODBC_0.rc
+++ b/KGCA41/ODBC_3_Prepare/ODBC_0.rc
@@ -50,27 +50,33 @@ END
 // Dialog
 //
 
-IDD_DIALOG1 DIALOGEX 0, 0, 361, 176
+IDD_DIALOG1 DIALOGEX 0, 0, 361, 222
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Dialog"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "확인",IDOK,245,155,50,14
-    PUSHBUTTON      "취소",IDCANCEL,304,155,50,14
-    LISTBOX         IDC_LIST1,7,20,122,137,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    DEFPUSHBUTTON   "확인",IDOK,304,178,50,14
+    PUSHBUTTON      "취소",IDCANCEL,304,201,50,14
+    LISTBOX         IDC_LIST1,7,20,122,188,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     EDITTEXT        IDC_NAME,137,81,59,19,ES_AUTOHSCROLL
     EDITTEXT        IDC_PASS,208,81,59,19,ES_AUTOHSCROLL
-    CONTROL         "국산",IDC_KOREAN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,323,121,31,10
+    CONTROL         "남자",IDC_SEX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,314,121,31,10
     LTEXT           "이름",IDC_STATIC,140,67,16,8
     LTEXT           "패스워드",IDC_STATIC,223,67,30,8
-    LTEXT           "국산",IDC_STATIC,330,103,16,8
+    LTEXT           "성별",IDC_STATIC,291,122,16,8
     PUSHBUTTON      "삽입",IDC_INSERT,155,22,50,14
     PUSHBUTTON      "삭제",IDC_DELETE,221,22,50,14
     PUSHBUTTON      "수정",IDC_UPDATE,287,22,50,14
     EDITTEXT        IDC_LEVEL,283,79,59,19,ES_AUTOHSCROLL
     LTEXT           "게임레벨",IDC_STATIC,298,66,30,8
-    EDITTEXT        IDC_ACCOUNTTIME,138,122,128,19,ES_AUTOHSCROLL
+    EDITTEXT        IDC_ACCOUNTTIME,138,119,128,19,ES_AUTOHSCROLL
     LTEXT           "생성일자",IDC_ACCOUNT,141,108,30,8
+    EDITTEXT        IDC_LOGINTIME,137,153,128,19,ES_AUTOHSCROLL
+    LTEXT           "로그인일시",IDC_ACCOUNT2,139,142,38,8
+    EDITTEXT        IDC_LOGOUTTIME,137,191,128,19,ES_AUTOHSCROLL
+    LTEXT           "로그아웃일시",IDC_ACCOUNT3,139,180,45,8
+    EDITTEXT        IDC_ID,170,42,59,19,ES_AUTOHSCROLL
+    LTEXT           "ID",IDC_STATIC,139,47,16,8
 END
 
 
@@ -87,7 +93,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 354
         TOPMARGIN, 7
-        BOTTOMMARGIN, 169
+        BOTTOMMARGIN, 215
     END
 END
 #endif    // APSTUDIO_INVOKED
