--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@
 /KGCA41/ODBC_2_Prepare/cigarette.laccdb
 /KGCA41/ODBC_3_Prepare/ODBC_3_Prepare.vcxproj.user
 /KGCA41/ODBC_3_Prepare/ODBC_0.APS
+/KGCA41/SQLQuery5.sql
